<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/login_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.5"
        android:scaleType="centerCrop" />

    <View
        android:id="@+id/view"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="140dp"
        android:alpha="0.5"
        android:background="@android:color/black"
        app:layout_constraintLeft_toLeftOf="@+id/login_background"
        app:layout_constraintRight_toRightOf="@+id/login_background"
        app:layout_constraintTop_toTopOf="@+id/login_background" />

    <EditText
        android:id="@+id/name_input"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="8dp"
        android:background="@null"
        android:hint="@string/input_name"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/darker_gray"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintLeft_toRightOf="@+id/imageView"
        app:layout_constraintRight_toRightOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/view" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginLeft="8dp"
        android:src="@drawable/ic_personal_data"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintLeft_toLeftOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/view" />

    <View
        android:id="@+id/view1"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:alpha="0.5"
        android:background="@android:color/black"
        app:layout_constraintLeft_toLeftOf="@+id/login_background"
        app:layout_constraintRight_toRightOf="@+id/login_background"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <EditText
        android:id="@+id/lastname_input"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="8dp"
        android:background="@null"
        android:hint="@string/input_lastname"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/darker_gray"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/view1"
        app:layout_constraintLeft_toRightOf="@+id/imageView1"
        app:layout_constraintRight_toRightOf="@+id/view1"
        app:layout_constraintTop_toTopOf="@+id/view1" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginLeft="8dp"
        android:src="@drawable/ic_personal_data"
        app:layout_constraintBottom_toBottomOf="@+id/view1"
        app:layout_constraintLeft_toLeftOf="@+id/view1"
        app:layout_constraintTop_toTopOf="@+id/view1" />

    <View
        android:id="@+id/view2"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="16dp"
        android:alpha="0.5"
        android:background="@android:color/black"
        app:layout_constraintLeft_toLeftOf="@+id/login_background"
        app:layout_constraintRight_toRightOf="@+id/login_background"
        app:layout_constraintTop_toBottomOf="@+id/view1" />

    <EditText
        android:id="@+id/login_input"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="8dp"
        android:background="@null"
        android:hint="@string/input_username"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/darker_gray"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/view2"
        app:layout_constraintLeft_toRightOf="@+id/imageView2"
        app:layout_constraintRight_toRightOf="@+id/view2"
        app:layout_constraintTop_toTopOf="@+id/view2" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginLeft="8dp"
        android:src="@drawable/ic_login"
        app:layout_constraintBottom_toBottomOf="@+id/view2"
        app:layout_constraintLeft_toLeftOf="@+id/view2"
        app:layout_constraintTop_toTopOf="@+id/view2" />

    <View
        android:id="@+id/view3"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:alpha="0.5"
        android:background="@android:color/black"
        app:layout_constraintLeft_toLeftOf="@+id/login_background"
        app:layout_constraintRight_toRightOf="@+id/login_background"
        app:layout_constraintTop_toBottomOf="@+id/view2" />

    <EditText
        android:id="@+id/password_input"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="8dp"
        android:background="@null"
        android:hint="@string/input_password"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/darker_gray"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/view3"
        app:layout_constraintLeft_toRightOf="@+id/imageView3"
        app:layout_constraintRight_toRightOf="@+id/view3"
        app:layout_constraintTop_toTopOf="@+id/view3" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginLeft="8dp"
        android:src="@drawable/ic_password"
        app:layout_constraintBottom_toBottomOf="@+id/view3"
        app:layout_constraintLeft_toLeftOf="@+id/view3"
        app:layout_constraintTop_toTopOf="@+id/view3" />

    <View
        android:id="@+id/view4"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="16dp"
        android:alpha="0.5"
        android:background="@android:color/black"
        app:layout_constraintLeft_toLeftOf="@+id/login_background"
        app:layout_constraintRight_toRightOf="@+id/login_background"
        app:layout_constraintTop_toBottomOf="@+id/view3" />

    <EditText
        android:id="@+id/librarian_code_input"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="8dp"
        android:background="@null"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:hint="@string/library_code"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/darker_gray"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/view4"
        app:layout_constraintLeft_toRightOf="@+id/imageView4"
        app:layout_constraintRight_toRightOf="@+id/view4"
        app:layout_constraintTop_toTopOf="@+id/view4" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginLeft="8dp"
        android:src="@drawable/ic_code"
        app:layout_constraintBottom_toBottomOf="@+id/view4"
        app:layout_constraintLeft_toLeftOf="@+id/view4"
        app:layout_constraintTop_toTopOf="@+id/view4" />

    <TextView
        android:id="@+id/register_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:alpha="0.7"
        android:background="@color/mainColor"
        android:padding="8dp"
        android:text="@string/register"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/view2"
        app:layout_constraintRight_toRightOf="@+id/password_input"
        app:layout_constraintTop_toBottomOf="@+id/view4" />

    <ProgressBar
        android:id="@+id/register_progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.WhiteAccent"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/register_button"
        app:layout_constraintLeft_toRightOf="@+id/register_button"
        app:layout_constraintRight_toLeftOf="@+id/register_button"
        app:layout_constraintTop_toTopOf="@+id/register_button" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="7dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/register_extra_note"
        android:textAlignment="center"
        android:textColor="@android:color/darker_gray"
        app:layout_constraintBottom_toBottomOf="@+id/login_background"
        app:layout_constraintLeft_toLeftOf="@+id/login_background"
        app:layout_constraintRight_toRightOf="@+id/login_background" />


</android.support.constraint.ConstraintLayout>